 * New NO_LOG flag to disable command logging on a per-object basis.
   Based on code by Teal. [SW]
 * mindb+maxdb classes for lsearch/@search no longer reset to default
   values when > db_top or < 0 is given: Instead treated as an integer
   comparison. [GM]
 * @open can now open exits in remove locations, as well as your current
   location. Suggested by Bane. [MG]
   
Commands:
 * New @include <obj>/<attr> command, which inserts <attr> into the current
   action list. Patch by Javelin.
 * @scan can now take multiple switches at the same time. [MG]
 * @version now reports the SVN revision of the current version, when 
   available. Suggested by Paige. [MG]
 * @clone can take a garbage dbref for the new object, the same as @create.
   Suggested by Dan. [MG]
   
Functions:
 * Added strfirstof() and strallof(), which return the first arg/all args
   which are non-empty strings. [MG]
 * Added reglattr[p](), regxattr[p]() and regnattr[p](), regexp variants of 
   lattr[p](), xattr[p]() and nattr[p](). Suggested by Trinsec. [MG]
 * The *emit() functions, and cbufferadd(), are now disabled when
   function_side_effects are off. Suggested by Cheetah. [MG]
 * round() now takes an optional third argument to 0-pad the results if
   needed. Suggested by Trinsec. [SW]
 * Many functions (particularly ones which take only numbers, dbrefs or
   attribute names as arguments) now ignore ANSI in their arguments, rather
   than throwing an error. [MG]
 * nattr()'s <attribute pattern> now defaults to *, not **, the same as
   lattr() and other attribute functions. [MG]
 * clone() can now take a <new name> and <dbref>, as per @clone. [MG]

Attributes:
 * @outpageformat lets you alter how you view pages that you send.

Fixes:
 * Possible crashbug in @destroy fixed. Reported by Dan. [MG]
 * Minor bug in benchmark() fixed. [MG]
 * channels(<object>) was incorrectly sorted for channel names containing
   ansi. Reported by Trelane. [MG]
 * Help fixes by Teal and others. [MG]